fix tag spacing

--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -131,11 +131,11 @@
           <div class="card brown darken-4 z-depth-3">
             <p>Blogs</p>
             <ul>
-              <li><a href="Linux/linux01.html"> Linux Work 01 - Intro/Resourses</a></li>
-              <li><a href="Linux/linux02.html"> Linux Work 02 - Belkin Serial Patch</a></li>
-              <li><a href="Linux/linux03.html"> Linux Work 03 - Keyspan Serial Patch</a></li>
-              <li><a href="Linux/linux04.html"> Linux Work 04 - Documentation Fix</a></li>
-              <li><a href="Linux/linux05.html"> Linux Work 05 - Eudyptula Challenge</a></li>
+              <li><a href="Linux/linux01.html">Linux Work 01 - Intro/Resourses</a></li>
+              <li><a href="Linux/linux02.html">Linux Work 02 - Belkin Serial Patch</a></li>
+              <li><a href="Linux/linux03.html">Linux Work 03 - Keyspan Serial Patch</a></li>
+              <li><a href="Linux/linux04.html">Linux Work 04 - Documentation Fix</a></li>
+              <li><a href="Linux/linux05.html">Linux Work 05 - Eudyptula Challenge</a></li>
             </ul>
           </div>
         </div>
@@ -156,17 +156,17 @@
           <div class="card brown darken-4 z-depth-3">
             <p>Instructables</p>
             <ul>
-              <li><a href="http://www.instructables.com/id/8-Bit-Arduino-Valentines-Heart/"> Instructable: 8-Bit Arduino Heart</a></li>
-              <li><a href="http://www.instructables.com/id/-Arduinolitics-Google-Analytics-on-Arduino/"> Arduinolitics - Analytics on Arduino</a></li>
+              <li><a href="http://www.instructables.com/id/8-Bit-Arduino-Valentines-Heart/">Instructable: 8-Bit Arduino Heart</a></li>
+              <li><a href="http://www.instructables.com/id/-Arduinolitics-Google-Analytics-on-Arduino/">Arduinolitics - Analytics on Arduino</a></li>
             </ul>
           </div>
           <div class="card brown darken-4 z-depth-3">
             <p>Thingiverse</p>
             <ul>
-              <li><a href="http://www.thingiverse.com/thing:121099"> Open Hardware Logo - PCB Vice</a></li>
-              <li><a href="http://www.thingiverse.com/thing:236948"> Electronics - Freetronics LeoStick bumper/header</a></li>
-              <li><a href="http://www.thingiverse.com/thing:225255"> Electronics - DIY Header Pins</a></li>
-              <li><a href="http://www.thingiverse.com/thing:180982"> Electronics - DIY led diffuser</a></li>
+              <li><a href="http://www.thingiverse.com/thing:121099">Open Hardware Logo for PCB Vice</a></li>
+              <li><a href="http://www.thingiverse.com/thing:236948">Freetronics LeoStick bumper/header</a></li>
+              <li><a href="http://www.thingiverse.com/thing:225255">DIY Header Pins</a></li>
+              <li><a href="http://www.thingiverse.com/thing:180982">DIY led diffuser</a></li>
             </ul>
           </div>
         </div>
@@ -193,14 +193,14 @@
           <div class="card brown darken-4 z-depth-3">
             <p>Blogs</p>
             <ul>
-              <li><a href="DevAdventures/da01.html"> 01 - Orbital Live Wallpaper</a></li>
-              <li><a href="DevAdventures/da02.html"> 02 - Data retention</a></li>
-              <li><a href="DevAdventures/da03.html"> 03 - XDA Developers "BASH Obsfucation Contest" entry</a></li>
-              <li><a href="DevAdventures/da04.html"> 04 - Embedding page data in a link</a></li>
-              <li><a href="DevAdventures/da05.html"> 05 - Gosling nightmares</a></li>
-              <li><a href="DevAdventures/da06.html"> 06 - Git yourself a schooling</a></li>
-              <li><a href="DevAdventures/da07.html"> 07 - An Array without bounds (more Gosling nightmares)</a></li>
-              <li><a href="DevAdventures/da08.html"> 08 - Lambdas and LEDs</a></li>
+              <li><a href="DevAdventures/da01.html">01 - Orbital Live Wallpaper</a></li>
+              <li><a href="DevAdventures/da02.html">02 - Data retention</a></li>
+              <li><a href="DevAdventures/da03.html">03 - XDA Developers "BASH Obsfucation Contest" entry</a></li>
+              <li><a href="DevAdventures/da04.html">04 - Embedding page data in a link</a></li>
+              <li><a href="DevAdventures/da05.html">05 - Gosling nightmares</a></li>
+              <li><a href="DevAdventures/da06.html">06 - Git yourself a schooling</a></li>
+              <li><a href="DevAdventures/da07.html">07 - An Array without bounds (more Gosling nightmares)</a></li>
+              <li><a href="DevAdventures/da08.html">08 - Lambdas and LEDs</a></li>
             </ul>
           </div>
         </div>
@@ -269,8 +269,8 @@
           <div class="card brown darken-4 z-depth-3">
             <p>LINK_TEXT</p>
             <ul>
-              <li><a href="RepRap/RepLogForm.html"> RepRap Live Log Entry Form (The InternetOfThingiverse)</a></li>
-              <li><a href="RepRap/index.html"> RepRap Network Pages</a></li>
+              <li><a href="RepRap/RepLogForm.html">RepRap Live Log Entry Form (The InternetOfThingiverse)</a></li>
+              <li><a href="RepRap/index.html">RepRap Network Pages</a></li>
             </ul>
           </div>
         </div>
@@ -316,7 +316,7 @@
           <span class="card-title white-text text-darken-4">REVEAL_TITLE_Links:<i class="material-icons right">close</i></span>
           <div class="card brown darken-4 z-depth-3">
             <p>LINK_TEXT</p>
-            <a href="#"> FIRST_LINK</a>
+            <a href="#">FIRST_LINK</a>
           </div>
         </div>
       </div>
@@ -336,16 +336,16 @@
           <div class="card brown darken-4 z-depth-3">
             <p>Thingiverse</p>
             <ul>
-              <li><a href="http://www.thingiverse.com/thing:247649"> Robjects - Toyota headrest mount (Diesel powered Arduino!)</a></li>
-              <li><a href="http://www.thingiverse.com/thing:240652"> Toyota headrest camera mount</a></li>
-              <li><a href="http://www.thingiverse.com/thing:246633"> Valentines - 8 Bit Arduino Heart</a></li>
-              <li><a href="http://www.thingiverse.com/thing:225261"> OpenScad Top Hat</a></li>
-              <li><a href="http://www.thingiverse.com/thing:156052"> Font - Kirsty</a></li>
-              <li><a href="http://www.thingiverse.com/thing:149838"> The Castle Back To School Set</a></li>
-              <li><a href="http://www.thingiverse.com/thing:140495"> Steampunk Glasses Lense Mod</a></li>
-              <li><a href="http://www.thingiverse.com/thing:130875"> Fluid Circuit - Caterpillar/Bug/Bee</a></li>
-              <li><a href="http://www.thingiverse.com/thing:114084"> Festive Cracker Printability and Scale Mod</a></li>
-              <li><a href="http://www.thingiverse.com/thing:140519"> Printable Signal White Cane</a></li>
+              <li><a href="http://www.thingiverse.com/thing:247649">Robjects - Toyota headrest mount (Diesel powered Arduino!)</a></li>
+              <li><a href="http://www.thingiverse.com/thing:240652">Toyota headrest camera mount</a></li>
+              <li><a href="http://www.thingiverse.com/thing:246633">Valentines - 8 Bit Arduino Heart</a></li>
+              <li><a href="http://www.thingiverse.com/thing:225261">OpenScad Top Hat</a></li>
+              <li><a href="http://www.thingiverse.com/thing:156052">Font - Kirsty</a></li>
+              <li><a href="http://www.thingiverse.com/thing:149838">The Castle Back To School Set</a></li>
+              <li><a href="http://www.thingiverse.com/thing:140495">Steampunk Glasses Lense Mod</a></li>
+              <li><a href="http://www.thingiverse.com/thing:130875">Fluid Circuit - Caterpillar/Bug/Bee</a></li>
+              <li><a href="http://www.thingiverse.com/thing:114084">Festive Cracker Printability and Scale Mod</a></li>
+              <li><a href="http://www.thingiverse.com/thing:140519">Printable Signal White Cane</a></li>
             </ul>
           </div>
         </div>
@@ -390,7 +390,7 @@
           <span class="card-title white-text text-darken-4">REVEAL_TITLE_Links:<i class="material-icons right">close</i></span>
           <div class="card brown darken-4 z-depth-3">
             <p>LINK_TEXT</p>
-            <a href="#"> FIRST_LINK</a>
+            <a href="#">FIRST_LINK</a>
           </div>
         </div>
       </div>
