add video links

--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -65,6 +65,13 @@
             <a href="https://codeforaustralia.github.io/DTF-Blog/">Blog and Documentation</a>
             <a href="https://github.com/PuZZleDucK/dtf-genesis">Source Code</a>
           </div>
+          <div class="card brown darken-4 z-depth-3">
+            <p>Videos from the fellowship:</p>
+            <a href="https://www.youtube.com/watch?v=VDg2JiLcEO8">Ignite - Electronic Gaming Machines</a>
+            <a href="https://www.youtube.com/watch?v=ollXXTvfqrs">CfA at OK - Government Contracting Data</a>
+            <a href="https://www.youtube.com/watch?v=0useXG_KkSY">CfA and DTF - Showcase @ CityLab </a>
+            <a href="https://www.youtube.com/watch?v=qn5qyZksrSc">Linux Conf Au - Planning Alerts, State Contracts then The World</a>
+          </div>
         </div>
       </div>
 
@@ -154,9 +161,18 @@
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
           <div class="card brown darken-4 z-depth-3">
+            <p>3D Printer Videos</p>
+            <ul>
+              <li><a href="https://www.youtube.com/watch?v=xr2l0eG3TFc">Drilling</a></li>
+              <li><a href="https://www.youtube.com/watch?v=cpOK_zX9AQU">Plotting</a></li>
+              <li><a href="https://www.youtube.com/watch?v=4cRiBKrv83E">Cutting</a></li>
+              <li><a href="https://www.youtube.com/watch?v=ZRGilHL9rI0">Chocolate</a></li>
+            </ul>
+          </div>
+          <div class="card brown darken-4 z-depth-3">
             <p>Instructables</p>
             <ul>
-              <li><a href="http://www.instructables.com/id/8-Bit-Arduino-Valentines-Heart/">Instructable: 8-Bit Arduino Heart</a></li>
+              <li><a href="http://www.instructables.com/id/8-Bit-Arduino-Valentines-Heart/">8-Bit Arduino Heart</a></li>
               <li><a href="http://www.instructables.com/id/-Arduinolitics-Google-Analytics-on-Arduino/">Arduinolitics - Analytics on Arduino</a></li>
             </ul>
           </div>
@@ -240,17 +256,22 @@
           <div class="card brown darken-4 z-depth-3">
             <p>Govhack</p>
             <a href="http://threeletternames.github.io/GovHack2015/">GovHack: Exploring Indigenous Culture</a>
+            <a href="https://www.youtube.com/watch?v=m39MWbq8Mjs">Final Video</a>
           </div>
           <div class="card brown darken-4 z-depth-3">
             <p>Random Hacks of Kindness</p>
             <a href="https://rhokaustralia.github.io/melb-maker-map/index.html">RHoK: Melbourne Maker Map</a>
           </div>
           <div class="card brown darken-4 z-depth-3">
-            <p>Budgethack</p>
+            <p>Budgethack - Budget 2.0</p>
             <a href="https://budget-2point0.herokuapp.com/">Application</a>
             <a href="https://github.com/PuZZleDucK/Budget-2.0">Source Code</a>
             <a href="https://semaphoreci.com/puzzleduck/budget-2-0">CI/CD</a>
           </div>
+          <div class="card brown darken-4 z-depth-3">
+            <p>Civic Hack</p>
+            <a href="https://www.youtube.com/watch?v=mWw6YKwDufQ">Visualize Melbourne - Ascii Art histogram</a>
+          </div>https://www.youtube.com/watch?v=mWw6YKwDufQ
         </div>
       </div>
 
@@ -267,7 +288,7 @@
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
           <div class="card brown darken-4 z-depth-3">
-            <p>LINK_TEXT</p>
+            <p>Old dead links</p>
             <ul>
               <li><a href="RepRap/RepLogForm.html">RepRap Live Log Entry Form (The InternetOfThingiverse)</a></li>
               <li><a href="RepRap/index.html">RepRap Network Pages</a></li>
@@ -294,10 +315,10 @@
           <p class="flow-text activator">Learning Haskell was maybe the best descision of my life. It brought relevance and utility to four years of dedicated study of logic and opened up a world of possibilities in maths ...</p>
         </div>
         <div class="card-reveal orange darken-3">
-          <span class="card-title white-text text-darken-4">REVEAL_TITLE_Links:<i class="material-icons right">close</i></span>
+          <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
           <div class="card brown darken-4 z-depth-3">
-            <p>LINK_TEXT</p>
-            <a href="#"> FIRST_LINK</a>
+            <p>Live coding video</p>
+            <a href="https://www.youtube.com/watch?v=gI9WDI1UZsY">Euler Problem 8 (Largest product in a series)</a>
           </div>
         </div>
       </div>
@@ -313,7 +334,7 @@
           <p class="flow-text activator">I did testing and compliance of gaming machines for almost a decade and have given a few presentations on the topic ...</p>
         </div>
         <div class="card-reveal orange darken-3">
-          <span class="card-title white-text text-darken-4">REVEAL_TITLE_Links:<i class="material-icons right">close</i></span>
+          <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
           <div class="card brown darken-4 z-depth-3">
             <p>LINK_TEXT</p>
             <a href="#">FIRST_LINK</a>
@@ -336,6 +357,7 @@
           <div class="card brown darken-4 z-depth-3">
             <p>Thingiverse</p>
             <ul>
+              <li><a href="https://www.youtube.com/watch?v=ti1k5np3VnA">Video - OpenSCAD spiral layout</a></li>
               <li><a href="http://www.thingiverse.com/thing:247649">Robjects - Toyota headrest mount (Diesel powered Arduino!)</a></li>
               <li><a href="http://www.thingiverse.com/thing:240652">Toyota headrest camera mount</a></li>
               <li><a href="http://www.thingiverse.com/thing:246633">Valentines - 8 Bit Arduino Heart</a></li>
