fsm links and content

--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -254,6 +254,12 @@
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
           <div class="card brown darken-4 z-depth-3">
+            <p>Budgethack - Budget 2.0</p>
+            <a href="https://budget-2point0.herokuapp.com/">Application</a>
+            <a href="https://github.com/PuZZleDucK/Budget-2.0">Source Code</a>
+            <a href="https://semaphoreci.com/puzzleduck/budget-2-0">CI/CD</a>
+          </div>
+          <div class="card brown darken-4 z-depth-3">
             <p>Govhack</p>
             <a href="http://threeletternames.github.io/GovHack2015/">GovHack: Exploring Indigenous Culture</a>
             <a href="https://www.youtube.com/watch?v=m39MWbq8Mjs">Final Video</a>
@@ -261,12 +267,6 @@
           <div class="card brown darken-4 z-depth-3">
             <p>Random Hacks of Kindness</p>
             <a href="https://rhokaustralia.github.io/melb-maker-map/index.html">RHoK: Melbourne Maker Map</a>
-          </div>
-          <div class="card brown darken-4 z-depth-3">
-            <p>Budgethack - Budget 2.0</p>
-            <a href="https://budget-2point0.herokuapp.com/">Application</a>
-            <a href="https://github.com/PuZZleDucK/Budget-2.0">Source Code</a>
-            <a href="https://semaphoreci.com/puzzleduck/budget-2-0">CI/CD</a>
           </div>
           <div class="card brown darken-4 z-depth-3">
             <p>Civic Hack</p>
@@ -318,7 +318,8 @@
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
           <div class="card brown darken-4 z-depth-3">
             <p>Live coding video</p>
-            <a href="https://www.youtube.com/watch?v=gI9WDI1UZsY">Euler Problem 8 (Largest product in a series)</a>
+            <a href="https://www.youtube.com/watch?v=gI9WDI1UZsY">Euler Problem 8 (Largest Product in a Series)</a>
+            <a href="https://www.youtube.com/watch?v=VnH3lirZMmY">Euler Problem 5 (Smallest Multiple)</a>
           </div>
         </div>
       </div>
@@ -388,9 +389,9 @@
           <div class="card brown darken-4 z-depth-3">
             <p>Requests</p>
             <ul>
+              <li><a href="https://www.righttoknow.org.au/request/contracts_published_on_tenders_v#outgoing-6382">Contracts Published on Tenders Vic</a></li>
               <li><a href="https://www.righttoknow.org.au/request/source_code_of_computercount#incoming-8888">Source code of "ComputerCount"</a></li>
               <li><a href="https://www.righttoknow.org.au/request/documents_relating_to_implementi#outgoing-6463">Documents relating to implementing e-voting in Victoria</a></li>
-              <li><a href="https://www.righttoknow.org.au/request/contracts_published_on_tenders_v#outgoing-6382">Contracts Published on Tenders Vic</a></li>
             </ul>
           </div>
         </div>
