--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -70,7 +70,6 @@
           <div class="card brown darken-4 z-depth-3">
             <p>Videos from the fellowship:</p>
             <ul>
-              <li><a href="https://www.youtube.com/watch?v=VDg2JiLcEO8">Ignite - Electronic Gaming Machines</a></li>
               <li><a href="https://www.youtube.com/watch?v=ollXXTvfqrs">CfA at OK - Government Contracting Data</a></li>
               <li><a href="https://www.youtube.com/watch?v=0useXG_KkSY">CfA and DTF - Showcase @ CityLab</a></li>
               <li><a href="https://www.youtube.com/watch?v=qn5qyZksrSc">Linux Conf Au - Planning Alerts, State Contracts then The World</a></li>
@@ -93,10 +92,12 @@
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
           <div class="card brown darken-4 z-depth-3">
             <p>FSM Media</p>
-            <a href="FSM/2017/hackathon-pamphlet.odt">Licencing at Hackathons Pamphlet</a>
-            <a href="FSM/2016/sfd-2016-flyer.png">2016 SFD Flyer</a>
-            <a href="FSM/2016/FOSS_in_Schools.odp">FOSS in Schools Presentation Slides</a>
-            <a href="FSM/2015/Wikipedia.odp">Contribuite to Wikipedia Presentation Slides</a>
+            <ul>
+              <li><a href="FSM/2017/hackathon-pamphlet.odt">Licencing at Hackathons Pamphlet</a></li>
+              <li><a href="FSM/2016/sfd-2016-flyer.png">2016 SFD Flyer</a></li>
+              <li><a href="FSM/2016/FOSS_in_Schools.odp">FOSS in Schools Presentation Slides</a></li>
+              <li><a href="FSM/2015/Wikipedia.odp">Contribuite to Wikipedia Presentation Slides</a></li>
+            </ul>
           </div>
           <div class="card brown darken-4 z-depth-3">
             <p>Gnews Presentations 2017</p>
@@ -345,8 +346,10 @@
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
           <div class="card brown darken-4 z-depth-3">
-            <p>LINK_TEXT</p>
-            <a href="#">FIRST_LINK</a>
+            <p>Videos</p>
+            <ul>
+              <li><a href="https://www.youtube.com/watch?v=VDg2JiLcEO8">Ignite - Electronic Gaming Machines</a></li>
+            </ul>
           </div>
         </div>
       </div>
