--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -41,7 +41,7 @@
 
 
   <div class="row">
-    <div class="col s12 m6 l4 cards-container">
+    <div class="col s12 l4 cards-container">
 
 
 
@@ -200,7 +200,7 @@
 
 
     </div>
-    <div class="col s12 m6 l4 cards-container">
+    <div class="col s12 l4 cards-container">
 
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
@@ -309,7 +309,7 @@
 
 
     </div>
-    <div class="col s12 m6 l4 cards-container">
+    <div class="col s12 l4 cards-container">
 
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
@@ -407,7 +407,7 @@
       </div>
 
 <!-- TEMPLATE
-    <div class="col s12 m6">
+    <div class="col s12 l4">
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h5 class="activator"><i class="material-icons small">alarm</i> - FILLER_TITLE</h5>
