--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -21,6 +21,7 @@
   <div class="col card-panel orange darken-3">
     <ul id="dropDown" class="dropdown-content brown darken-4">
        <li><a target="_blank" href="https://github.com/PuZZleDucK/PuZZleDucK.ORG">PuZZleDucK.ORG Source Code</a></li>
+       <li class="divider"></li>
        <li><a target="_blank" href="https://www.linkedin.com/in/puzzleduck">LinkedIn</a></li>
        <li><a target="_blank" href="https://github.com/PuZZleDucK">GitHub</a></li>
        <li><a target="_blank" href="https://twitter.com/_PuZZleDucK_">Twitter</a></li>
