--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -20,11 +20,12 @@
 
   <div class="col card-panel orange darken-3">
     <ul id="dropDown" class="dropdown-content brown darken-4">
-       <li><a target="_blank" href="https://github.com/PuZZleDucK/PuZZleDucK.ORG">PuZZleDucK.ORG Source Code</a></li>
-       <li class="divider"></li>
        <li><a target="_blank" href="https://www.linkedin.com/in/puzzleduck">LinkedIn</a></li>
+       <li class="divider"></li>
        <li><a target="_blank" href="https://github.com/PuZZleDucK">GitHub</a></li>
+       <li class="divider"></li>
        <li><a target="_blank" href="https://twitter.com/_PuZZleDucK_">Twitter</a></li>
+       <li class="divider"></li>
        <li><a target="_blank" href="https://play.google.com/store/apps/developer?id=PuZZleDucK+Industries.">Android</a></li>
     </ul>
     <nav>
@@ -439,6 +440,7 @@
      <div class="footer-copyright">
         <div class="container">
            © 2017 PuZZleDucK
+           <a target="_blank" href="https://github.com/PuZZleDucK/PuZZleDucK.ORG">PuZZleDucK.org Source Code</a>
            <a class="grey-text text-lighten-4 right" href="mailto:puzzleduck@gmail.com">Email PuZZleDucK</a>
         </div>
      </div>
