--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -439,8 +439,8 @@
   <footer class="page-footer orange darken-3">
      <div class="footer-copyright">
         <div class="container">
-           © 2017 PuZZleDucK
-           <a target="_blank" href="https://github.com/PuZZleDucK/PuZZleDucK.ORG">PuZZleDucK.org Source Code</a>
+           <div>© 2017 PuZZleDucK</div>
+           <div><a target="_blank" href="https://github.com/PuZZleDucK/PuZZleDucK.ORG">PuZZleDucK.org Source Code</a></div>
         </div>
      </div>
   </footer>
