--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -439,8 +439,9 @@
   <footer class="page-footer orange darken-3">
      <div class="footer-copyright">
         <div class="container">
-           <div>© 2017 PuZZleDucK</div>
-           <div><a target="_blank" href="https://github.com/PuZZleDucK/PuZZleDucK.ORG">PuZZleDucK.org Source Code</a></div>
+           © 2017 PuZZleDucK
+           <a class="grey-text text-lighten-4 center" target="_blank" href="https://github.com/PuZZleDucK/PuZZleDucK.ORG">PuZZleDucK.ORG Source Code</a>
+           <a class="grey-text text-lighten-4 right" href="mailto:puzzleduck@gmail.com">Email PuZZleDucK</a>
         </div>
      </div>
   </footer>
