--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -439,9 +439,8 @@
   <footer class="page-footer orange darken-3">
      <div class="footer-copyright">
         <div class="container">
-           © 2017 PuZZleDucK
-           <a class="grey-text text-lighten-4 center" target="_blank" href="https://github.com/PuZZleDucK/PuZZleDucK.ORG">PuZZleDucK.ORG Source Code</a>
-           <a class="grey-text text-lighten-4 right" href="mailto:puzzleduck@gmail.com">Email PuZZleDucK</a>
+           © 2017 <a href="mailto:puzzleduck@gmail.com">PuZZleDucK</a>
+           <a class="grey-text text-lighten-4 right" target="_blank" href="https://github.com/PuZZleDucK/PuZZleDucK.ORG">PuZZleDucK.ORG Source Code</a>
         </div>
      </div>
   </footer>
