--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -94,7 +94,6 @@
         </div>
         <div class="card-reveal highlight">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
-          <hr />
           <div class="card primary z-depth-3">
             <p>FSM Media</p>
             <ul>
@@ -150,7 +149,6 @@
         </div>
         <div class="card-reveal highlight">
           <span class="card-title white-text text-darken-4">Blogs:<i class="material-icons right">close</i></span>
-          <hr />
           <div class="card primary z-depth-3">
             <ul>
               <li><a target="_blank" href="Linux/linux01.html">Linux Work 01 - Intro/Resourses</a></li>
@@ -176,7 +174,6 @@
         </div>
         <div class="card-reveal highlight">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
-          <hr />
           <div class="card primary z-depth-3">
             <p>3D Printer Videos</p>
             <ul>
@@ -224,7 +221,6 @@
         </div>
         <div class="card-reveal highlight">
           <span class="card-title white-text text-darken-4">Blogs:<i class="material-icons right">close</i></span>
-          <hr />
           <div class="card primary z-depth-3">
             <ul>
               <li><a target="_blank" href="DevAdventures/da01.html">01 - Orbital Live Wallpaper</a></li>
@@ -253,7 +249,6 @@
         </div>
         <div class="card-reveal highlight">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
-          <hr />
           <div class="card primary z-depth-3">
             <p>D3 Projects</p>
             <a target="_blank" href="HTML5/D3/character-frequency/CharacterFrequency.html">D3: Live Character Frequency Analysis</a>
@@ -274,7 +269,6 @@
         </div>
         <div class="card-reveal highlight">
           <span class="card-title white-text text-darken-4">Project Links:<i class="material-icons right">close</i></span>
-          <hr />
           <div class="card primary z-depth-3">
             <p>Budgethack - 'Budget 2.0'</p>
             <a target="_blank" href="https://budget-2point0.herokuapp.com/">Application</a>
@@ -310,7 +304,6 @@
         </div>
         <div class="card-reveal highlight">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
-          <hr />
           <div class="card primary z-depth-3">
             <p>Old dead links</p>
             <ul>
@@ -341,7 +334,6 @@
         </div>
         <div class="card-reveal highlight">
           <span class="card-title white-text text-darken-4">Videos:<i class="material-icons right">close</i></span>
-          <hr />
           <div class="card primary z-depth-3">
             <p>Live coding</p>
             <ul>
@@ -365,7 +357,6 @@
         </div>
         <div class="card-reveal highlight">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
-          <hr />
           <div class="card primary z-depth-3">
             <p>Videos</p>
             <ul>
@@ -388,7 +379,6 @@
         </div>
         <div class="card-reveal highlight">
           <span class="card-title white-text text-darken-4">3D Designs:<i class="material-icons right">close</i></span>
-          <hr />
           <div class="card primary z-depth-3">
             <ul>
               <li><a target="_blank" href="https://www.youtube.com/watch?v=ti1k5np3VnA">Video - OpenSCAD spiral layout</a></li>
@@ -420,7 +410,6 @@
         </div>
         <div class="card-reveal highlight">
           <span class="card-title white-text text-darken-4">Requests:<i class="material-icons right">close</i></span>
-          <hr />
           <div class="card primary z-depth-3">
             <ul>
               <li><a target="_blank" href="https://www.righttoknow.org.au/request/contracts_published_on_tenders_v#outgoing-6382">Contracts Published on Tenders Vic</a></li>
@@ -446,7 +435,6 @@
         </div>
         <div class="card-reveal highlight">
           <span class="card-title white-text text-darken-4">REVEAL_TITLE_Links:<i class="material-icons right">close</i></span>
-          <hr />
           <div class="card primary z-depth-3">
             <p>LINK_TEXT</p>
             <a target="_blank" href="#">FIRST_LINK</a>
@@ -462,7 +450,7 @@
 
 
 
-  <footer class="page-footer highlight">
+  <footer class="page-footer highlight title">
      <div class="footer-copyright">
         <div class="container">
            © 2017 <a href="mailto:puzzleduck@gmail.com">PuZZleDucK</a>
