header and footer font

--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -18,7 +18,7 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
 
-  <div class="col card-panel highlight">
+  <div class="col card-panel highlight title">
     <ul id="dropDown" class="dropdown-content primary">
        <li><a target="_blank" href="https://www.linkedin.com/in/puzzleduck">LinkedIn</a></li>
        <li class="divider"></li>
