--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -50,7 +50,7 @@
 
       <div class="card primary z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
-          <h5 class="activator"><i class="material-icons small">account_balance</i> - Code for Australia</h5>
+          <h5 class="activator title"><i class="material-icons small">account_balance</i> - Code for Australia</h5>
           <hr />
         </div>
         <div class="activator">
