--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -83,7 +83,7 @@
 
       <div class="card primary z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
-          <h5 class="activator"><i class="material-icons small">cast</i> - Free Software Melbourne</h5>
+          <h5 class="activator title"><i class="material-icons small">cast</i> - Free Software Melbourne</h5>
           <hr />
         </div>
         <div class="activator">
@@ -138,7 +138,7 @@
 
       <div class="card primary z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
-          <h5 class="activator"><i class="material-icons small">memory</i> - Linux Kernel</h5>
+          <h5 class="activator title"><i class="material-icons small">memory</i> - Linux Kernel</h5>
           <hr />
         </div>
         <div class="activator">
@@ -163,7 +163,7 @@
 
       <div class="card primary z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
-          <h5 class="activator"><i class="material-icons small">developer_board</i> - Electronics &amp; Hardware</h5>
+          <h5 class="activator title"><i class="material-icons small">developer_board</i> - Electronics &amp; Hardware</h5>
           <hr />
         </div>
         <div class="activator">
@@ -210,7 +210,7 @@
 
       <div class="card primary z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
-          <h5 class="activator"><i class="material-icons small">devices</i> - Java &amp; Android</h5>
+          <h5 class="activator title"><i class="material-icons small">devices</i> - Java &amp; Android</h5>
           <hr />
         </div>
         <div class="activator">
@@ -238,7 +238,7 @@
 
       <div class="card primary z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
-          <h5 class="activator"><i class="material-icons small">web</i> - Javascript</h5>
+          <h5 class="activator title"><i class="material-icons small">web</i> - Javascript</h5>
           <hr />
         </div>
         <div class="activator">
@@ -258,7 +258,7 @@
 
       <div class="card primary z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
-          <h5 class="activator"><i class="material-icons small">weekend</i> - Hackathon Projects</h5>
+          <h5 class="activator title"><i class="material-icons small">weekend</i> - Hackathon Projects</h5>
           <hr />
         </div>
         <div class="activator">
@@ -293,7 +293,7 @@
 
       <div class="card primary z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
-          <h5 class="activator"><i class="material-icons small">wifi_tethering</i> - The RepWeb</h5>
+          <h5 class="activator title"><i class="material-icons small">wifi_tethering</i> - The RepWeb</h5>
           <hr />
         </div>
         <div class="activator">
@@ -323,7 +323,7 @@
 
       <div class="card primary z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
-          <h5 class="activator"><i class="material-icons small">keyboard</i> - Haskell</h5>
+          <h5 class="activator title"><i class="material-icons small">keyboard</i> - Haskell</h5>
           <hr />
         </div>
         <div class="activator">
@@ -346,7 +346,7 @@
 
       <div class="card primary z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
-          <h5 class="activator"><i class="material-icons small">assignment</i> - Testing</h5>
+          <h5 class="activator title"><i class="material-icons small">assignment</i> - Testing</h5>
           <hr />
         </div>
         <div class="activator">
@@ -368,7 +368,7 @@
 
       <div class="card primary z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
-          <h5 class="activator"><i class="material-icons small">style</i> - 3D Designs</h5>
+          <h5 class="activator title"><i class="material-icons small">style</i> - 3D Designs</h5>
           <hr />
         </div>
         <div class="activator">
@@ -399,7 +399,7 @@
 
       <div class="card primary z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
-          <h5 class="activator"><i class="material-icons small">remove_red_eye</i> - Freedom of Information</h5>
+          <h5 class="activator title"><i class="material-icons small">remove_red_eye</i> - Freedom of Information</h5>
           <hr />
         </div>
         <div class="activator">
@@ -424,7 +424,7 @@
     <div class="col s12 l4">
       <div class="card primary z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
-          <h5 class="activator"><i class="material-icons small">alarm</i> - FILLER_TITLE</h5>
+          <h5 class="activator title"><i class="material-icons small">alarm</i> - FILLER_TITLE</h5>
           <hr />
         </div>
         <div class="activator">
