--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -454,7 +454,7 @@
      <div class="footer-copyright">
         <div class="container">
            © 2017 <a href="mailto:puzzleduck@gmail.com">PuZZleDucK</a>
-           <p>PuZZleDucK.ORG <a class="grey-text text-lighten-4 right" target="_blank" href="https://github.com/PuZZleDucK/PuZZleDucK.ORG">Source Code</a></p>
+           <a class="grey-text text-lighten-4 right" target="_blank" href="https://github.com/PuZZleDucK/PuZZleDucK.ORG">PuZZleDucK.ORG Source Code</a>
         </div>
      </div>
   </footer>
