--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -327,7 +327,7 @@
           <hr />
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://puzzleduck.org/img/Haskell_Logo.svg" alt="icon">
+          <img class="right small activator" height="100" src="http://puzzleduck.org/img/Haskell_Logo.png" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">Learning Haskell could have been the best descision of my life. It brought relevance and utility to four years of dedicated study of logic, and opened up a world of possibilities in maths ...</p>
