--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -87,7 +87,7 @@
           <hr />
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://www.softwarefreedomday.org/countdown/banner1-UTC-4-en.png" alt="icon">
+          <img class="right small activator" height="100" src="http://puzzleduck.org/img/fsf.png" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">I have been an organizer of Free Software Melbourne since 2013, I often present our regular Gnews segment, along with preparing outreach materials, and running events throughout the year ...</p>
