--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -15,8 +15,8 @@
 
 <body class="white-text grey lighten-3">
   <!--Import jQuery before materialize.js-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js" defer></script>
+  <script type="text/javascript" src="js/materialize.min.js" defer></script>
 
   <div class="col card-panel highlight title">
     <ul id="dropDown" class="dropdown-content primary">
