--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -30,7 +30,7 @@
     </ul>
     <nav>
        <div class="nav-wrapper primary valign">
-          PuZZleDucK
+          <div class="brand-logo center valign">PuZZleDucK</a>
           <ul id="nav-mobile" class="right valign">
              <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right valign">menu</i></a></li> <!-- Dropdown Trigger -->
           </ul>
