mobile header tweaks

--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -29,10 +29,10 @@
        <li><a target="_blank" href="https://play.google.com/store/apps/developer?id=PuZZleDucK+Industries.">Android</a></li>
     </ul>
     <nav>
-       <div class="nav-wrapper primary valign">
-          <div class="brand-logo center valign">PuZZleDucK</div>
-          <ul id="nav-mobile" class="right valign">
-             <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right valign">menu</i></a></li> <!-- Dropdown Trigger -->
+       <div class="nav-wrapper primary">
+          <a href="http://puzzleduck.org" class="brand-logo center">PuZZleDucK</a>
+          <ul id="nav-mobile" class="right">
+             <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right">menu</i></a></li> <!-- Dropdown Trigger -->
           </ul>
        </div>
     </nav>
