--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -272,27 +272,29 @@
           <div class="card primary z-depth-5">
             <p>Budgethack - 'Budget 2.0'</p>
             <ul>
-              <a target="_blank" href="https://budget-2point0.herokuapp.com/">Application</a>
-              <a target="_blank" href="https://github.com/PuZZleDucK/Budget-2.0">Source Code</a>
-              <a target="_blank" href="https://semaphoreci.com/puzzleduck/budget-2-0">CI/CD</a>
+              <li><a target="_blank" href="https://budget-2point0.herokuapp.com/">Application</a></li>
+              <li><a target="_blank" href="https://github.com/PuZZleDucK/Budget-2.0">Source Code</a></li>
+              <li><a target="_blank" href="https://semaphoreci.com/puzzleduck/budget-2-0">CI/CD</a></li>
             </ul>
           </div>
           <div class="card primary z-depth-5">
             <p>Govhack</p>
             <ul>
-              <a target="_blank" href="http://threeletternames.github.io/GovHack2015/">GovHack - 'Exploring Indigenous Culture'</a>
-              <a target="_blank" href="https://www.youtube.com/watch?v=m39MWbq8Mjs">Final Video</a>
+              <li><a target="_blank" href="http://threeletternames.github.io/GovHack2015/">GovHack - 'Exploring Indigenous Culture'</a></li>
+              <li><a target="_blank" href="https://www.youtube.com/watch?v=m39MWbq8Mjs">Final Video</a></li>
             </ul>
           </div>
           <div class="card primary z-depth-5">
             <p>Random Hacks of Kindness</p>
             <ul>
-              <a target="_blank" href="https://rhokaustralia.github.io/melb-maker-map/index.html">RHoK - 'Melbourne Maker Map'</a>
+              <li><a target="_blank" href="https://rhokaustralia.github.io/melb-maker-map/index.html">RHoK - 'Melbourne Maker Map'</a></li>
             </ul>
           </div>
           <div class="card primary z-depth-5">
             <p>Civic Hack</p>
-            <a target="_blank" href="https://www.youtube.com/watch?v=mWw6YKwDufQ">Visualize Melbourne - 'ASCII Art Histogram'</a>
+            <ul>
+              <li><a target="_blank" href="https://www.youtube.com/watch?v=mWw6YKwDufQ">Visualize Melbourne - 'ASCII Art Histogram'</a></li>
+            </ul>
           </div>
         </div>
       </div>
